--- a/cep-search/index.html
+++ b/cep-search/index.html
@@ -22,17 +22,17 @@
 			<p>CEP</p>
 			
 			<div class="first-block">
-				<input type="text" id="cep-input1" name="input1" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input2); validate(this)" onFocus="empty(this)">
-				<input type="text" id="cep-input2" name="input2" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input3); validate(this)" onFocus="empty(this)">
-				<input type="text" id="cep-input3" name="input3" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input4); validate(this)" onFocus="empty(this)">
-				<input type="text" id="cep-input4" name="input4" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input5); validate(this)" onFocus="empty(this)">
-				<input type="text" id="cep-input5" name="input5" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input6); validate(this)" onFocus="empty(this)">
+				<input type="number" id="cep-input1" name="input1" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input2); validate(this)" onFocus="empty(this)">
+				<input type="number" id="cep-input2" name="input2" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input3); validate(this)" onFocus="empty(this)">
+				<input type="number" id="cep-input3" name="input3" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input4); validate(this)" onFocus="empty(this)">
+				<input type="number" id="cep-input4" name="input4" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input5); validate(this)" onFocus="empty(this)">
+				<input type="number" id="cep-input5" name="input5" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input6); validate(this)" onFocus="empty(this)">
 			</div>
 
 			<div class="second-block">
-				<input type="text" id="cep-input6" name="input6" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input7); validate(this)" onFocus="empty(this)">
-				<input type="text" id="cep-input7" name="input7" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input8); validate(this)" onFocus="empty(this)">
-				<input type="text" id="cep-input8" name="input8" maxlength="1" placeholder="0" autocomplete="off" 
+				<input type="number" id="cep-input6" name="input6" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input7); validate(this)" onFocus="empty(this)">
+				<input type="number" id="cep-input7" name="input7" maxlength="1" placeholder="0" autocomplete="off" onKeyup="autoTab(this, form.input8); validate(this)" onFocus="empty(this)">
+				<input type="number" id="cep-input8" name="input8" maxlength="1" placeholder="0" autocomplete="off" 
 				onKeyup="validate(this)" onchange="search()" onFocus="empty(this)">
 			</div>
 		</form>
