--- a/jane-doe/index.html
+++ b/jane-doe/index.html
@@ -32,7 +32,7 @@
 					<p>Dignissimos velit eveniet ratione doloremque necessitatibus numquam, perferendis accusamus expedita, veniam, hic aspernatur quisquam <i>sapiente cum rerum</i> accusantium dolorem reprehenderit aut voluptates esse libero. Voluptates quo, quasi dolores explicabo at similique eaque. Mollitia vitae esse eaque tenetur dolorem ad voluptates dolores!</p>
 				</article>
 
-				<article>
+				<article id="illustration-and-songs">
 					<div id="illustration">
 						<img src="./img/ilustra.png" alt="Girl dancing and smartphone illustration">
 					</div>
