Add music and about pages

--- a/jane-doe/index.html
+++ b/jane-doe/index.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-	
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="css/styles.css">
-		<title>Jane Doe</title>
-	</head>
 
-	<body>
-			<header>
-				<h1>JANE DOE</h1>
-				<nav>
-					<ul>
-						<li><a href="index.html" class="selected">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="music.html">Music</a></li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</nav>
-			</header>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/styles.css">
+	<title>Jane Doe</title>
+</head>
 
-			<section>
-				<div id="banner"></div>
-				
-				<article>
-					<h2>Concept</h2>
-					<br />
-					<p>Lorem, <b>ipsum dolor sit</b> amet consectetur adipisicing elit. Nostrum illo ullam magnam molestiae? Neque officia quam nulla vitae architecto? At excepturi praesentium nostrum, cum molestias reprehenderit eaque quibusdam obcaecati. Possimus.</p>
-					<br />
-					<p>Dignissimos velit eveniet ratione doloremque necessitatibus numquam, perferendis accusamus expedita, veniam, hic aspernatur quisquam <i>sapiente cum rerum</i> accusantium dolorem reprehenderit aut voluptates esse libero. Voluptates quo, quasi dolores explicabo at similique eaque. Mollitia vitae esse eaque tenetur dolorem ad voluptates dolores!</p>
-				</article>
+<body>
+	<div class="wrapper">
+		<header>
+			<h1>JANE DOE</h1>
+			<nav>
+				<ul>
+					<li><a href="index.html" class="selected">Home</a></li>
+					<li><a href="about.html">About</a></li>
+					<li><a href="music.html">Music</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</nav>
+		</header>
 
-				<article id="illustration-and-songs">
-					<div id="illustration">
-						<img src="./img/ilustra.png" alt="Girl dancing and smartphone illustration">
-					</div>
+		<section>
+			<div id="banner"></div>
+			
+			<article>
+				<h2>Concept</h2>
+				<br />
+				<p>Lorem, <b>ipsum dolor sit</b> amet consectetur adipisicing elit. Nostrum illo ullam magnam molestiae? Neque officia quam nulla vitae architecto? At excepturi praesentium nostrum, cum molestias reprehenderit eaque quibusdam obcaecati. Possimus.</p>
+				<br />
+				<p>Dignissimos velit eveniet ratione doloremque necessitatibus numquam, perferendis accusamus expedita, veniam, hic aspernatur quisquam <i>sapiente cum rerum</i> accusantium dolorem reprehenderit aut voluptates esse libero. Voluptates quo, quasi dolores explicabo at similique eaque. Mollitia vitae esse eaque tenetur dolorem ad voluptates dolores!</p>
+			</article>
 
-					<div id="songs">
-						<ol>
-							<li><a href="#">Organic Love</a> | 02:40</li>
-							<li><a href="#">Twist In My Reality</a> | 02:10</li>
-							<li><a href="#">Street Light |</a> 03:28</li>
-							<li><a href="#">Love Don't Live Heve Anymore (Cover)</a> | 03:49</li>
-						</ol>
-					</div>
-				</article>
+			<article id="illustration-and-songs">
+				<div id="illustration">
+					<img src="./img/ilustra.png" alt="Girl dancing and smartphone illustration">
+				</div>
 
-			</section>
+				<div id="songs">
+					<ol>
+						<li><a href="#">Organic Love</a> | 02:40</li>
+						<li><a href="#">Twist In My Reality</a> | 02:10</li>
+						<li><a href="#">Street Light |</a> 03:28</li>
+						<li><a href="#">Love Don't Live Heve Anymore (Cover)</a> | 03:49</li>
+					</ol>
+				</div>
+			</article>
 
-			<footer>
-				<p>Copyright - Jane Doe</p>
-			</footer>
+		</section>
+	</div>
 
-	</body>
+	<footer>
+		<p>Copyright - Jane Doe</p>
+	</footer>
+
+</body>
 
 </html>
