--- a/jane-doe/contact.html
+++ b/jane-doe/contact.html
@@ -22,34 +22,76 @@
 			</nav>
 		</header>
 
-		<section id="music">
+		<section id="contact">
 			
 			<article>
-				<h2>Music</h2>
-				
-				<div class="video">
-					VIDEO
+				<h2>Contact</h2>
+
+				<div id="form-and-map">
+					<form>
+
+						<div class="input-block">
+							<p>Name</p>
+							<input type="text" name="name">
+						</div>
+
+						<div class="input-block">
+							<p>Email</p>
+							<input type="text" name="email">
+						</div>
+
+						<div class="input-block">
+							<p>Message</p>
+							<input type="textarea" name="message">
+						</div>
+
+						<div class="selection-block">
+							<p>How did you found Jane's music?</p>
+							<input type="radio" name="media" value="instagram">Instagram<br />
+							<input type="radio" name="media" value="facebook">Facebook<br />
+							<input type="radio" name="media" value="youtube">YouTube<br />
+						</div>
+
+						<div class="selection-block">
+							<input type="checkbox" name="subscribe" value="subscribe">Do you want to subscribe to our newsletter?
+						</div>
+
+						<input type="submit" value="Send">
+
+					</form>
+
+					<div id="map">
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14624.191636863383!2d-46.684102732937596!3d-23.60261468466238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce50ab7feb4519%3A0x739f0ddb0439cf94!2sDigital%20House%20S%C3%A3o%20Paulo!5e0!3m2!1ses-419!2sbr!4v1602339169700!5m2!1ses-419!2sbr" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					</div>
 				</div>
 
-				<ul>
-					<li>Organic Love | 02:40</li>
-					<li>Twist In My Reality | 02:10</li>
-					<li>Street Light | 03:28</li>
-					<li>Love Don't Live Heve Anymore (Cover) | 03:49</li>
-				</ul>
+				<div id="contacts">
+					<hr>
+					<h4>MANAGEMENT | Karen Blanche</h4>
+					<p>email: <a href="#">info@mysite.com</a></p>
+					<p>phone: <a href="#">123-456-7890</a></p>
 
-				<div class="video">
-					VIDEO
+					<hr>
+					<h4>BOOKING | Daniel Ku</h4>
+					<p>email: <a href="#">info@mysite.com</a></p>
+					<p>phone: <a href="#">123-456-7890</a></p>
+
+					<hr>
+					<h4>BOOKING | Daniel Ku</h4>
+					<p>email: <a href="#">info@mysite.com</a></p>
+					<p>phone: <a href="#">123-456-7890</a></p>
+
+					<hr>
+					<h4>BOOKING | Daniel Ku</h4>
+					<p>email: <a href="#">info@mysite.com</a></p>
+					<p>phone: <a href="#">123-456-7890</a></p>
 				</div>
 
-				<div id="technical-details">
-					<p>Directed by VINCE MALC & EMILIA COLE</p>
-					<p>Edited and Filmed by NICOLAS TROY</p>
-					<p>Produced by NIKI HEART.</p>
-					<p>Wix Films LTD.</p>
-				</div>
 			</article>
 		</section>
+
+		<div class="push">
+		</div>
 	</div>
 
 	<footer>
